kubernetes/prod/app/deploy.yaml
#manifest script for public manifest
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spleet-public-frontend-prod
  namespace: spleet-public-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spleet-public-frontend-prod
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: spleet-public-frontend-prod
    spec:
      containers:
        - name: spleet-public-frontend-prod
          image: spleet/spleet-public-frontend-prod:31-66baba4e9876e86072adb0c270af98e47404b1ba
          ports:
          - containerPort: 3001
            protocol: TCP
        #  livenessProbe:
        #    httpGet:
        #      path: /
        #      port: 3001
        #    initialDelaySeconds: 150
        #    periodSeconds: 280
        #    failureThreshold: 5
        #  readinessProbe:
        #    httpGet:
        #      path: /
        #      port: 3001
        #    initialDelaySeconds: 150
        #    periodSeconds: 5
        #    timeoutSeconds: 3
        #    successThreshold: 1
          
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
        - name: regcred
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600

---
apiVersion: v1
kind: Service
metadata:
  name: spleet-public-frontend-prod
  namespace: spleet-public-frontend
  labels:
    app: spleet-public-frontend-prod
    service: spleet-public-frontend-prod
spec:
  ports:
  - port: 3001
    name: http
  selector:
    app: spleet-public-frontend-prod

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spleet-public-frontend-prod
  namespace: spleet-public-frontend
  annotations:
    nginx.ingress.kubernetes.io/default-backend: ingress-nginx-controller
    kubernetes.io/ingress.class: nginx 
    ## tells ingress to check for regex in the config file
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, PATCH, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-max-age: "600"
#     nginx.ingress.kubernetes.io/configuration-snippet: |
#     more_set_headers "Access-Control-Allow-Origin: $http_origin";
    #certmanager.k8s.io/cluster-issuer: letsencrypt
#     kubernetes.io/ingress.class: nginx
#     service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"

spec:
  rules:
  - host: "spleet.africa"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: spleet-public-frontend-prod
            port:
              number: 3001



#manifest script for backend manifest
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-backend
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: prod-backend
  template:
    metadata:
      labels:
        app: prod-backend
    spec:
      volumes:
       - name: verifybucketupload
         secret:
           secretName: verify-prod-statement-upload
      containers:
        - name: prod-backend
          image: spleet/backendapp:24-f8f54ac463ec6c00f5d373a561997df7fb931809
          volumeMounts:
            - name: verifybucketupload
              mountPath: /app/verifybucketupload
          ports:
          - containerPort: 3000
            protocol: TCP
          livenessProbe:
            httpGet:
             path: /v1/health-check
             port: 3000
            initialDelaySeconds: 400
            periodSeconds: 30
            failureThreshold: 4
            TimeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /v1/health-check
              port: 3000
            initialDelaySeconds: 400
            periodSeconds: 30
            failureThreshold: 4
            TimeoutSeconds: 10
#           resources:
#            limits:
#               cpu: 900m
#               memory: 900Mi
#            requests:
#               cpu: 200m
#               memory: 300Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
        - name: regcred
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600

---
apiVersion: v1
kind: Service
metadata:
  name: prod-backend
  namespace: prod
  labels:
    app: prod-backend
    service: prod-backend
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: prod-backend
 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-backend
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/default-backend: ingress-nginx-controller
    kubernetes.io/ingress.class: nginx 
    ## tells ingress to check for regex in the config file
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, PATCH, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  rules:
  - host: "api-prod.spleet.africa"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prod-backend
            port:
              number: 3000




#manifest script for frontend manifest
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newfrontend-prod
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newfrontend-prod
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: newfrontend-prod
    spec:
      containers:
        - name: newfrontend-prod
          image: spleet/newfrontend-prod:30-a6af4be8c3b4fe0dacf90e2b6d9226cd09d62ce1
          ports:
          - containerPort: 80
            protocol: TCP
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: 80
          #   initialDelaySeconds: 100
          #   periodSeconds: 240
          #   failureThreshold: 5
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 80
          #   initialDelaySeconds: 100
          #   periodSeconds: 5
          #   timeoutSeconds: 3
          #   successThreshold: 1
          
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
        - name: regcred
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600

---
apiVersion: v1
kind: Service
metadata:
  name: newfrontend-prod
  namespace: prod
  labels:
    app: newfrontend-prod
    service: newfrontend-prod
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: newfrontend-prod

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newfrontend-prod
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/default-backend: ingress-nginx-controller
    kubernetes.io/ingress.class: nginx 
    ## tells ingress to check for regex in the config file
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, PATCH, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-max-age: "600"
#     nginx.ingress.kubernetes.io/configuration-snippet: |
#     more_set_headers "Access-Control-Allow-Origin: $http_origin";
    #certmanager.k8s.io/cluster-issuer: letsencrypt
#     kubernetes.io/ingress.class: nginx
#     service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"

spec:
  rules:
  - host: "dashboard.spleet.africa"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: newfrontend-prod
            port:
              number: 80



#manifest script for rnpl manifest

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rnpl-backend
  namespace: rnpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rnpl-backend
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: rnpl-backend
    spec:
      volumes:
       - name: rnplbucketupload
         secret:
           secretName: rnpl-prod-statement-upload
      
      containers:
        - name: rnpl-backend
          image: spleet/rnpl-prod:9-7e2762dd5052454fb54fd188139bc81fa4d06b29
          volumeMounts:
            - name: rnplbucketupload
              mountPath: /app/rnplbucketupload
          ports:
          - containerPort: 4000
            protocol: TCP
          livenessProbe:
            httpGet:
             path: /v1/health-check
             port: 4000
            initialDelaySeconds: 5
            periodSeconds: 45
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /v1/health-check
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 45
          
          terminationMessagePath: /rnpl/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
        - name: regcred
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
apiVersion: v1
kind: Service
metadata:
  name: rnpl-backend
  namespace: rnpl
  labels:
    app: rnpl-backend
    service: rnpl-backend
spec:
  ports:
  - port: 4000
    name: http
  selector:
    app: rnpl-backend

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rnpl-backend
  namespace: rnpl
  annotations:
    nginx.ingress.kubernetes.io/default-backend: ingress-nginx-controller
    kubernetes.io/ingress.class: nginx 
    ## tells ingress to check for regex in the config file
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, PATCH, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-max-age: "600"
#     nginx.ingress.kubernetes.io/configuration-snippet: |
#     more_set_headers "Access-Control-Allow-Origin: $http_origin";
    #certmanager.k8s.io/cluster-issuer: letsencrypt
#     kubernetes.io/ingress.class: nginx
#     service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"

spec:
  rules:
  - host: "rnpl.spleet.africa"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rnpl-backend
            port:
              number: 4000
